Move the outputs to bin/

--- a/build
+++ b/build
@@ -1,6 +1,7 @@
 #!/bin/bash
 set -ex
-ghcjs Main.hs
-closure-compiler --compilation_level ADVANCED_OPTIMIZATIONS --jscomp_off=checkVars --externs=Main.jsexe/all.js.externs --externs=elevator.js.externs  Main.jsexe/all.js > all.min.js
-#cp Main.jsexe/all.js all.min.js
-sed -f script.sed tpl.js > out.js
+mkdir -p bin
+ghcjs Main.hs -odir bin -hidir bin -o bin/Main
+closure-compiler --compilation_level ADVANCED_OPTIMIZATIONS --jscomp_off=checkVars --externs=bin/Main.jsexe/all.js.externs --externs=elevator.js.externs bin/Main.jsexe/all.js > bin/all.min.js
+#cp bin/Main.jsexe/all.js bin/all.min.js
+sed -f script.sed tpl.js > bin/out.js
